--- a/login.html
+++ b/login.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - IA SISTEM</title>
+    <title>Tela de Login - IA SISTEM</title>
     <link href="css/styles.css" rel="stylesheet">
     <style>
         /* Estilos específicos para a página de login */
         body {
-            background: linear-gradient(135deg, #1e3a8a 0%, #0891b2 100%);
+            background: linear-gradient(135deg, #1e3a8a 0%, #088bab 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -19,8 +19,8 @@
         }
 
         .login-container {
-            background: white;
-            border-radius: 20px;
+            background: #18415b;
+            border-radius: 15px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             padding: 50px;
             width: 100%;
@@ -29,38 +29,29 @@
         }
 
         .login-logo {
-            width: 120px;
-            height: 120px;
+            width: 220px;
             background: var(--primary-blue);
-            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 0 auto 30px;
-            color: white;
+            margin: 0 auto 14px;
+            color: rgba(255, 255, 255, 0);
             font-size: 48px;
             font-weight: bold;
-            overflow: hidden;
+            
         }
 
         .login-logo img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 50%;
         }
 
-        .login-title {
-            color: var(--dark-blue);
-            font-size: 32px;
-            margin-bottom: 10px;
-            font-weight: 700;
-        }
 
         .login-subtitle {
             color: var(--gray-medium);
-            font-size: 16px;
-            margin-bottom: 40px;
+            font-size: 13px;
+            margin-bottom: 21px;
         }
 
         .login-form {
@@ -206,17 +197,11 @@
     <div class="login-container">
         <!-- Logo e Título -->
         <div class="login-logo">
-            <img src="img/ia-system.png" alt="Logo IA Sistem">
+            <img src="img/IA SISTEM 2.png" alt="Logo IA Sistem">
         </div>
-        <h1 class="login-title">IA SISTEM</h1>
-        <p class="login-subtitle">Sistema de Gerenciamento de Assistência Técnica</p>
+        <h1 class="login-title"></h1>
+        <p class="login-subtitle">Um sistema criado para facilitar rotinas, garantir controles e otimizar cada etapa de sua assistência técnica.</p>
 
-        <!-- Credenciais de Demonstração -->
-        <div class="demo-credentials">
-            <strong>🔑 Credenciais de Demonstração:</strong><br>
-            Usuário: <strong>admin</strong><br>
-            Senha: <strong>admin123</strong>
-        </div>
 
         <!-- Mensagens de Erro/Sucesso -->
         <div id="errorMessage" class="error-message"></div>
@@ -225,31 +210,31 @@
         <!-- Formulário de Login -->
         <form id="loginForm" class="login-form">
             <div class="form-group">
-                <label for="usuario">Usuário</label>
+                <label for="usuario"></label>
                 <input 
                     type="text" 
                     id="usuario" 
                     name="usuario" 
-                    placeholder="Digite seu usuário"
+                    placeholder="Usuário"
                     required
                     autocomplete="username"
                 >
             </div>
 
             <div class="form-group">
-                <label for="senha">Senha</label>
+                <label for="senha"></label>
                 <input 
                     type="password" 
                     id="senha" 
                     name="senha" 
-                    placeholder="Digite sua senha"
+                    placeholder="Senha"
                     required
                     autocomplete="current-password"
                 >
             </div>
 
             <button type="submit" id="loginBtn" class="login-btn">
-                <span id="btnText">Entrar no Sistema</span>
+                <span id="btnText">Entrar</span>
                 <div id="loading" class="loading">
                     <div class="spinner"></div>
                     <span>Entrando...</span>
@@ -257,10 +242,13 @@
             </button>
         </form>
 
+        
+
         <!-- Rodapé -->
         <div class="login-footer">
             <p>© 2025 IA SISTEM - Curso Full Stack Senac</p>
             <p>Desenvolvido para fins educacionais</p>
+            <p>usuário:admin-senha:admin123</p>
         </div>
     </div>
 
